--- a/duels/13mar21/match11/duel3.html
+++ b/duels/13mar21/match11/duel3.html
@@ -53,7 +53,7 @@
     <div class="turn-p2">
       <p>Donovan activate his Set<sup>4</sup> <span class="cardName">Ice Dragon's Prison</span><sup>2</sup>, targeting Kristian's <span class="cardName">Tour Guide From the Underworld</span><sup>1</sup>. Donovan Special Summon Kristian's <span class="cardName">Tour Guide From the Underworld</span><sup>1</sup> to his Monster Zone 2 in Attack Position.</p>
       <p>Donovan attack Kristian's <span class="cardName">The Phantom Knights of Ragged Gloves</span><sup>1</sup> with his <span class="cardName">Huaquero of the Golden Land</span><sup>2</sup>. Kristian take 800 battle damage (Kristian 7200 LP). Kristian's <span class="cardName">The Phantom Knights of Ragged Gloves</span><sup>1</sup> is destroyed by battle.</p>
-      <p>Donovan attack directly with his <span class="cardName">Tour Guide From the Underworld</span><sup>1</sup>. Kristian take 1000 battle damage (Kristian 6200 LP).</p>
+      <p>Donovan attack directly with Kristian's <span class="cardName">Tour Guide From the Underworld</span><sup>1</sup>. Kristian take 1000 battle damage (Kristian 6200 LP).</p>
       <p>Donovan attack directly with his <span class="cardName">Eldlich the Golden Lord</span><sup>1</sup>. Kristian take 2500 battle damage (Kristian 3700 LP).</p>
       <p>Donovan set the Link Arrow with his <span class="cardName">Huaquero of the Golden Land</span><sup>2</sup> to Link Summon a <span class="cardName">Link Spider</span><sup>1</sup> to the right-hand Extra Monster Zone.</p>
       <p>Donovan activate the effect of his <span class="cardName">Eldlixir of Scarlet Sanguine</span><sup>1</sup>, banishing it. Donovan Set<sup>8</sup> a <span class="cardName">Conquistador of the Golden Land</span><sup>1</sup> from his Deck in Spell &amp; Trap Zone 4.</p>
