update aura description

--- a/description/92519087.html
+++ b/description/92519087.html
@@ -28,7 +28,7 @@
       <span class="condition"></span>
       <span class="activation"></span>
       <span class="resolution"></span>
-      Any card sent from the field to the GY is banished instead.
+      Cards sent from the field to the GY are banished instead.
     </p>
     <p class="effect">
       <span class="effectNumber">&#9313;: </span>
