--- a/description/27204311.html
+++ b/description/27204311.html
@@ -27,7 +27,7 @@
       <span class="effectNumber">&#9312;: </span>
       <span class="condition">During the Main Phase, if your opponent Normal or Special Summoned 5 or more monsters this turn (Quick Effect): </span>
       <span class="activation"></span>
-      <span class="resolution">You can Tribute as many face-up monsters on the field as possible, and if you do, Special Summon this card from your hand, then Special Summon 1 "Primal Being Token" (Rock/LIGHT/Level&nbsp;11/ATK&nbsp;?/DEF&nbsp;?) to your opponent's field. That Token ATK/DEF become the combined original ATK/DEF of the Tributed monsters.</span>
+      <span class="resolution">You can Tribute as many face-up monsters on the field as possible, and if you do, Special Summon this card from your hand, then Special Summon 1 "Primal Being Token" (Rock/LIGHT/Level&nbsp;11/ATK&nbsp;?/DEF&nbsp;?) to your opponent's field. That Token's ATK/DEF become the combined original ATK/DEF of the Tributed monsters.</span>
     </p>
   </div>
 </body>
