--- a/duels/13mar21/match11/duel2.html
+++ b/duels/13mar21/match11/duel2.html
@@ -11,7 +11,7 @@
   </div>
   <div id="duelScript">
     <div class="turn-p1">
-      <p>Donovan Set<sup>1&rarr;5</sup> 5 Spells/Traps in Spell &amp; Trap Zones 1, 2, 3, 4, and 5.</p>
+      <p>Donovan Set<sup>1&rarr;5</sup> 5 Spells/Traps in all the Spell &amp; Trap Zones.</p>
     </div>
     <div class="turn-p2">
       <p>Kristian activate an <span class="cardName">Evenly Matched</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 3. Donovan chain the activation of his Set<sup>1</sup> <span class="cardName">Solemn Judgment</span><sup>1</sup>, paying 4000 LP (Donovan 4000 LP). Chain Link 2 resolve: Donovan negate the activation of Chain Link 1 and destroy Kristian's <span class="cardName">Evenly Matched</span><sup>1</sup>. Chain Link 1 does not resolve.</p>
