fix prosperity effect

--- a/duels/13mar21/match12/duel1.html
+++ b/duels/13mar21/match12/duel1.html
@@ -15,6 +15,7 @@
     </div>
     <div class="turn-p2">
       <p>Marco activate a <span class="cardName">Pot of Prosperity</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 3. Marco banish face-down 6 cards from his Extra Deck, then excavate from his Deck a <span class="cardName">Virtual World Gate - Qinglong</span>, a <span class="cardName">Virtual World Gate - Chuche</span>, a <span class="cardName">Virtual World City - Kauwloon</span>, a <span class="cardName">PSY-Framegear Gamma</span>, a <span class="cardName">Pot of Prosperity</span>, and a <span class="cardName">Virtual World Mai-Hime - Lulu</span>. Marco add a <span class="cardName">Virtual World City - Kauwloon</span> from his Deck to the hand and place the rest on the bottom of his Deck.</p>
+      <p class="note">For the rest of this turn, any damage Alex take is halved.</p>
       <p>Marco activate a <span class="cardName">Virtual World City - Kauwloon</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 3. Marco place a <span class="cardName">Virtual World Gate - Chuche</span><sup>1</sup> from his Deck face-up in Spell &amp; Trap Zone 4.</p>
       <p>Marco activate the effect of a <span class="cardName">Virtual World Mai-Hime - Lulu</span> in his hand, targeting his <span class="cardName">Virtual World Gate - Chuche</span><sup>1</sup>. Alex chain the effect of an <span class="cardName">Ash Blossom &amp; Joyous Spring</span><sup>1</sup> in his hand, discarding it. Chain Link 2 resolve: Alex negate the effect of Chain Link 1. Chain Link 1 resolve without effect.</p>
       <p>Marco activate the effect of a <span class="cardName">Virtual World Roshi - Laolao</span> in his hand, targeting his <span class="cardName">Virtual World Gate - Chuche</span><sup>1</sup>. Marco send a <span class="cardName">Virtual World Gate - Qinglong</span><sup>1</sup> from his Deck to the GY and Special Summon a <span class="cardName">Virtual World Roshi - Laolao</span><sup>1</sup> from his hand to Monster Zone 3 in Defense Position.</p>
@@ -23,7 +24,7 @@
       <p>Marco activate the effect of his <span class="cardName">Virtual World Gate - Chuche</span><sup>2</sup>, banishing it and target his <span class="cardName">Virtual World Xiezhi - Jiji</span><sup>1</sup>. The effect resolve.</p>
       <p class="note">Marco's <span class="cardName">Virtual World Xiezhi - Jiji</span><sup>1</sup> have its Level increased by 3 until the end of this turn.</p>
       <p>Marco overlay his <span class="cardName">Virtual World Roshi - Laolao</span><sup>1</sup> and his <span class="cardName">Virtual World Xiezhi - Jiji</span><sup>1</sup> to Xyz Summon a <span class="cardName">Constellar Ptolemy M7</span><sup>1</sup> to the right-hand Extra Monster Zone in Attack Position.</p>
-      <p>Marco attack directly with his <span class="cardName">Constellar Ptolemy M7</span><sup>1</sup>. Alex take 2700 battle damage (Alex 5300 LP).</p>
+      <p>Marco attack directly with his <span class="cardName">Constellar Ptolemy M7</span><sup>1</sup>. Alex take 1350 battle damage (Alex 6650 LP).</p>
       <p>Marco activate the effect of his <span class="cardName">Constellar Ptolemy M7</span><sup>1</sup>, detaching his <span class="cardName">Virtual World Xiezhi - Jiji</span><sup>1</sup>, then target it. Marco return his <span class="cardName">Virtual World Xiezhi - Jiji</span><sup>1</sup> to the hand.</p>
       <p>Marco overlay his <span class="cardName">Constellar Ptolemy M7</span><sup>1</sup> to Xyz Summon a <span class="cardName">Divine Arsenal AA-ZEUS - Sky Thunder</span><sup>1</sup> to the right-hand Extra Monster Zone in Defense Position.</p>
       <p class="note">The effect of Marco's <span class="cardName">Virtual World Xiezhi - Jiji</span><sup>1</sup> apply.</p>
@@ -38,9 +39,7 @@
       <p>Marco activate the effect of a <span class="cardName">Virtual World Mai-Hime - Lulu</span> in his hand, targeting his <span class="cardName">Virtual World Gate - Chuche</span><sup>1</sup>. Marco send a <span class="cardName">Virtual World Gate - Qinglong</span><sup>2</sup> from his Deck to the GY and Special Summon a <span class="cardName">Virtual World Mai-Hime - Lulu</span><sup>2</sup> from his hand to Monster Zone 3 in Attack Position, then add a <span class="cardName">Virtual World Kirin - Lili</span> from his Deck to the hand.</p>
       <p>Marco activate the effect of a <span class="cardName">Virtual World Kirin - Lili</span> in his hand, targeting his <span class="cardName">Virtual World Mai-Hime - Lulu</span><sup>2</sup>. Marco send a <span class="cardName">Virtual World Gate - Xuanwu</span><sup>1</sup> from his Deck to the GY and Special Summon a <span class="cardName">Virtual World Kirin - Lili</span><sup>1</sup> from his hand to Monster Zone 2 in Attack Position.</p>
       <p>Marco change his <span class="cardName">Divine Arsenal AA-ZEUS - Sky Thunder</span><sup>1</sup> to Attack Position.</p>
-      <p>Marco attack directly with his <span class="cardName">Virtual World Mai-Hime - Lulu</span><sup>2</sup>. Alex take 1600 battle damage (Alex 3700 LP).</p>
-      <p>Marco attack directly with his <span class="cardName">Virtual World Kirin - Lili</span><sup>1</sup>. Alex take 1800 battle damage (Alex 1900 LP).</p>
-      <p>Marco attack directly with his <span class="cardName">Divine Arsenal AA-ZEUS - Sky Thunder</span><sup>1</sup>. Alex take 3000 battle damage (Alex 0 LP).</p>
+      <p>Alex concede.</p>
     </div>
   </div>
 </body>
