--- a/description/10813327.html
+++ b/description/10813327.html
@@ -17,7 +17,7 @@
     <!-- <p class="cardText"></p> -->
     <p class="effect">
       <span class="effectNumber">&#9312;: </span>
-      <span class="condition">If this Set card in your control left the field because of an opponent's effect and is now in the GY or banished: </span>
+      <span class="condition">If this Set card in your control left the field by an opponent's effect and was sent to the GY or banished: </span>
       <span class="activation"></span>
       <span class="resolution">You can Special Summon 1 monster from your Deck or Extra Deck.</span>
     </p>
