--- a/description/4367330.html
+++ b/description/4367330.html
@@ -37,7 +37,7 @@
       An Xyz Monster whose original Type is Beast-Warrior and has this card as material gains this effect:
     </p>
     <ul>
-      <li>When your opponent activates a Spell effect that targets this card (Quick Effect): You can detach 1 material from this card; negate that activation.</li>
+      <li>When your opponent activates a Spell or Spell effect that targets this card (Quick Effect): You can detach 1 material from this card; negate that activation.</li>
     </ul>
   </div>
 </body>
