--- a/duels/13mar21/index.html
+++ b/duels/13mar21/index.html
@@ -21,6 +21,8 @@
 <body>
   <h1>Remote Duel Invitational (13-14 March 2021)</h1>
       <h3>Match 1: Daniel Hartmann VS Leonardo Sacchetti</h3>
+        <a href="match1/duel1.html">Duel 1</a><br>
+        <a href="match1/duel2.html">Duel 2</a>
       <h3>Match 2: Benjamin Robison VS Danyllo Verweij</h3>
         <a href="match2/duel1.html">Duel 1</a><br>
         <a href="match2/duel2.html">Duel 2</a>
