--- a/description/38814750.html
+++ b/description/38814750.html
@@ -25,7 +25,7 @@
     <p class="cardText">Cannot be Normal Summoned/Set. Must be Special Summoned by a card effect.</p>
     <p class="effect">
       <span class="effectNumber">&#9312;: </span>
-      <span class="condition">When your opponent activates a monster effect while you control no monsters (Quick Effect): </span>
+      <span class="condition">If you control no monsters, when your opponent activates a monster effect (Quick Effect): </span>
       <span class="activation"></span>
       <span class="resolution">You can Special Summon this card from your hand and 1 "PSY-Frame Driver" from your hand, Deck, or GY, and if you do, negate that activation, and if you do that, destroy that monster. During the End Phase, banish all monsters Special Summoned by this effect.</span>
     </p>
