add duel and description

--- a/duels/13mar21/index.html
+++ b/duels/13mar21/index.html
@@ -27,6 +27,8 @@
         <a href="match2/duel1.html">Duel 1</a><br>
         <a href="match2/duel2.html">Duel 2</a>
       <h3>Match 3: Jamie Hunter VS Joshua Niedergesäß</h3>
+        <a href="match3/duel1.html">Duel 1</a><br>
+        <a href="match3/duel2.html">Duel 2</a>
       <h3>Match 4: Adi Porča VS Marijn van Duivenboden</h3>
       <h3>Match 5: Donovan LeBlanc VS Joshua Dickerson</h3>
       <h3>Match 6: Kristian Pašić VS Sven-Ole Wegner</h3>
