--- a/duels/13mar21/index.html
+++ b/duels/13mar21/index.html
@@ -30,6 +30,8 @@
         <a href="match3/duel1.html">Duel 1</a><br>
         <a href="match3/duel2.html">Duel 2</a>
       <h3>Match 4: Adi Porča VS Marijn van Duivenboden</h3>
+        <a href="match4/duel1.html">Duel 1</a><br>
+        <a href="match4/duel2.html">Duel 2</a>
       <h3>Match 5: Donovan LeBlanc VS Joshua Dickerson</h3>
       <h3>Match 6: Kristian Pašić VS Sven-Ole Wegner</h3>
       <h3>Match 7: Aleksandar Sokolović VS Marco Sánchez</h3>
