--- a/description/64765016.html
+++ b/description/64765016.html
@@ -24,8 +24,8 @@
     <p class="effect">
       <span class="effectNumber">&#9313;: </span>
       <span class="condition">Once per Chain, when a Trap is activated: </span>
-      <span class="activation">Special Summon this card from the GY as a Normal Monster (Aqua/WATER/Level&nbsp;2/ATK&nbsp;1200/DEF&nbsp;0), but banish it when it leaves the field, also it is unaffected by monster effects. (This card is no longer a Trap.)</span>
-      <span class="resolution"></span>
+      <span class="activation"></span>
+      <span class="resolution">You can Special Summon this card from the GY as a Normal Monster (Aqua/WATER/Level&nbsp;2/ATK&nbsp;1200/DEF&nbsp;0), but banish it when it leaves the field, also it is unaffected by monster effects. (This card is no longer a Trap.)</span>
     </p>
   </div>
 </body>
