--- a/duels/13mar21/match10/duel1.html
+++ b/duels/13mar21/match10/duel1.html
@@ -11,7 +11,8 @@
   </div>
   <div id="duelScript">
     <div class="turn-p1">
-      <p>Marijn activate a <span class="cardName">Cursed Eldland</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 1, paying 800 LP (Marijn 7200 LP). Marijn add an <span class="cardName">Eldlich the Golden Lord</span> from his Deck to the hand.</p>
+      <p>Marijn activate a <span class="cardName">Cursed Eldland</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 1. Its effects apply.</p>
+      <p>Marijn activate the effect of his <span class="cardName">Cursed Eldland</span><sup>1</sup>, paying 800 LP (Marijn 7200 LP). Marijn add an <span class="cardName">Eldlich the Golden Lord</span> from his Deck to the hand.</p>
       <p>Marijn activate a <span class="cardName">Red-Eyes Fusion</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 3. Marijn fuse a <span class="cardName">Dark Magician</span><sup>1</sup> in his Deck and a <span class="cardName">Red-Eyes Black Dragon</span><sup>1</sup> in his Deck to Fusion Summon a <span class="cardName">Red-Eyes Dark Dragoon</span><sup>1</sup> to Monster Zone 5 in Attack Position.</p>
       <p>Marijn Set<sup>1&rarr;3</sup> 3 Spells/Traps in Spell &amp; Trap Zones 2, 3, and 4.</p>
     </div>
@@ -25,17 +26,25 @@
       </ul>
       <p class="note">Joshua's <span class="cardName">Zoodiac Hammerkong</span><sup>1</sup> currently gain 1200 ATK by its own effect.</p>
       <p>Joshua attack Marijn's <span class="cardName">Red-Eyes Dark Dragoon</span><sup>1</sup> with his <span class="cardName">Zoodiac Hammerkong</span><sup>1</sup>. Joshua take 1800 battle damage (Joshua 5200 LP).</p>
-      <p>Joshua activate the effect of his <span class="cardName">Zoodiac Hammerkong</span><sup>1</sup>. Marijn chain the effect of his <span class="cardName">Red-Eyes Dark Dragoon</span><sup>1</sup>, discarding an <span class="cardName">Eldlich the Golden Lord</span><sup>1</sup>. Chain Link 2 resolve: Marijn negate the activation of Chain Link 1 and destroy Joshua's <span class="cardName">Zoodiac Hammerkong</span><sup>1</sup>. Chain Link 1 does not resolve.</p>
+      <p class="activation">Joshua activate the effect of his <span class="cardName">Zoodiac Hammerkong</span><sup>1</sup>.</p><div class="chain">
+        <p>Marijn activate the effect of his <span class="cardName">Red-Eyes Dark Dragoon</span><sup>1</sup>, discarding an <span class="cardName">Eldlich the Golden Lord</span><sup>1</sup>. Marijn negate the activation of Chain Link 1 and destroy Joshua's <span class="cardName">Zoodiac Hammerkong</span><sup>1</sup>.</p>
+      </div><p class="resolution">The effect does not resolve.</p>
       <p>Joshua activate a <span class="cardName">Fire Formation - Tenki</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 4. Joshua add a <span class="cardName">Zoodiac Ratpier</span> from his Deck to the hand.</p>
       <p>Joshua Set<sup>4&rarr;5</sup> 2 Spells/Traps in Spell &amp; Trap Zones 1 and 5.</p>
     </div>
     <div class="turn-p1">
       <p>Marijn activate the effect of his <span class="cardName">Cursed Eldland</span><sup>1</sup>, paying 800 LP (Marijn 6400 LP). Marijn add a <span class="cardName">Huaquero of the Golden Land</span> from his Deck to the hand.</p>
-      <p>Marijn activate the effect of his <span class="cardName">Eldlich the Golden Lord</span><sup>1</sup>, sending his <span class="cardName">Cursed Eldland</span><sup>1</sup> to the GY. Joshua chain the effect of a <span class="cardName">Chost Belle &amp; Haunted Mansion</span><sup>1</sup> in his hand, discarding it. Marijn chain the activation of his Set<sup>2</sup> <span class="cardName">Solemn Strike</span><sup>1</sup>, paying 1500 LP (Marijn 4900 LP). Chain Link 3 resolve: Marijn negate the activation of Chain Link 2. Chain Link 2 does not resolve. Chain Link 1 resolve: Marijn Special Summon his <span class="cardName">Eldlich the Golden Lord</span><sup>1</sup> to Monster Zone 1 in Attack Position.</p>
+      <p class="activation">Marijn activate the effect of his <span class="cardName">Eldlich the Golden Lord</span><sup>1</sup>, sending his <span class="cardName">Cursed Eldland</span><sup>1</sup> to the GY.</p><div class="chain">
+        <p class="activation">Joshua activate the effect of a <span class="cardName">Chost Belle &amp; Haunted Mansion</span><sup>1</sup> in his hand, discarding it.</p><div class="chain">
+          <p>Marijn activate his Set<sup>2</sup> <span class="cardName">Solemn Strike</span><sup>1</sup>, paying 1500 LP (Marijn 4900 LP). Marijn negate the activation of Chain Link 2.</p>
+        </div><p class="resolution">The effect does not resolve.</p>
+      </div><p class="resolution">Marijn Special Summon his <span class="cardName">Eldlich the Golden Lord</span><sup>1</sup> to Monster Zone 1 in Attack Position.</p>
       <p class="note">Marijn's <span class="cardName">Eldlich the Golden Lord</span><sup>1</sup> gain 1000 ATK until the end of next turn.</p>
       <p>Marijn attack directly with his <span class="cardName">Eldlich the Golden Lord</span><sup>1</sup>. Joshua take 3500 battle damage (Joshua 1700 LP).</p>
       <p>Marijn declare a direct attack with his <span class="cardName">Red-Eyes Dark Dragoon</span><sup>1</sup>.</p>
-      <p>Joshua activate his Set<sup>4</sup> <span class="cardName">Conquistador of the Golden Land</span><sup>1</sup>. Marijn chain the activation of his Set<sup>3</sup> <span class="cardName">Conquistador of the Golden Land</span><sup>2</sup>. Joshua concede.</p>
+      <p class="activation">Joshua activate his Set<sup>4</sup> <span class="cardName">Conquistador of the Golden Land</span><sup>1</sup>.</p><div class="chain">
+        <p>Marijn activate his Set<sup>3</sup> <span class="cardName">Conquistador of the Golden Land</span><sup>2</sup>. Joshua concede.</p>
+      </div>
     </div>
   </div>
 </body>
