--- a/duels/13mar21/match11/duel1.html
+++ b/duels/13mar21/match11/duel1.html
@@ -11,7 +11,9 @@
   </div>
   <div id="duelScript">
     <div class="turn-p1">
-      <p>Donovan activate a <span class="cardName">Red-Eyes Fusion</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 2. Kristian chain the effect of an <span class="cardName">Ash Blossom &amp; Joyous Spring</span><sup>1</sup> in his hand, discarding it. Chain Link 2 resolve: Kristian negate the effect of Chain Link 1. Chain Link 1 resolve without effect.</p>
+      <p class="activation">Donovan activate a <span class="cardName">Red-Eyes Fusion</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 2.</p><div class="chain">
+        <p>Kristian activate the effect of an <span class="cardName">Ash Blossom &amp; Joyous Spring</span><sup>1</sup> in his hand, discarding it. Kristian negate the effect of Chain Link 1.</p>
+      </div><p class="resolution">The effect fizzle.</p>
       <p>Donovan Set<sup>1&rarr;3</sup> 3 Spells/Traps in Spell &amp; Trap Zones 1, 2, and 3.</p>
     </div>
     <div class="turn-p2">
@@ -26,11 +28,14 @@
       <p>Kristian Special Summon a <span class="cardName">The Phantom Knights of Silent Boots</span><sup>1</sup> from his hand to Monster Zone 3 in Defense Position.</p>
       <p>Kristian set the Link Arrow with his <span class="cardName">The Phantom Knights of Shade Brigandine</span><sup>1</sup> to Link Summon a <span class="cardName">Link Spider</span><sup>1</sup> to the left-hand Extra Monster Zone.</p>
       <p>Kristian set the Link Arrows with his <span class="cardName">The Phantom Knights of Silent Boots</span><sup>1</sup> and his <span class="cardName">Link Spider</span><sup>1</sup> to Link Summon a <span class="cardName">Predaplant Verte Anaconda</span><sup>1</sup> to the left-hand Extra Monster Zone.</p>
-      <p>Kristian activate the effect of his <span class="cardName">Predaplant Verte Anaconda</span><sup>1</sup>, paying 2000 LP (Kristian 6000 LP) and send a <span class="cardName">Red-Eyes Fusion</span><sup>2</sup> from his Deck to the GY. Donovan chain the activation of his Set<sup>2</sup> <span class="cardName">Solemn Strike</span><sup>2</sup>, paying 1500 LP (Donovan 5000 LP). Chain Link 2 resolve: Donovan negate the activation of Chain Link 1 and destroy Kristian's <span class="cardName">Predaplant Verte Anaconda</span><sup>1</sup>. Chain Link 1 does not resolve.</p>
+      <p class="activation">Kristian activate the effect of his <span class="cardName">Predaplant Verte Anaconda</span><sup>1</sup>, paying 2000 LP (Kristian 6000 LP) and send a <span class="cardName">Red-Eyes Fusion</span><sup>2</sup> from his Deck to the GY.</p><div class="chain">
+        <p>Donovan activate his Set<sup>2</sup> <span class="cardName">Solemn Strike</span><sup>2</sup>, paying 1500 LP (Donovan 5000 LP). Donovan negate the activation of Chain Link 1 and destroy Kristian's <span class="cardName">Predaplant Verte Anaconda</span><sup>1</sup>.</p>
+      </div><p class="resolution">The effect does not resolve.</p>
       <p>Kristian Set<sup>5</sup> a Spell/Trap in Spell &amp; Trap Zone 2.</p>
     </div>
     <div class="turn-p1">
-      <p>Donovan activate a <span class="cardName">Cursed Eldland</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 2, paying 800 LP (Donovan 4200 LP). Donovan add a <span class="cardName">Huaquero of the Golden Land</span> from his Deck to the hand.</p>
+      <p>Donovan activate a <span class="cardName">Cursed Eldland</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 2. Its effects apply.</p>
+      <p>Donovan activate the effect of his <span class="cardName">Cursed Eldland</span><sup>1</sup>, paying 800 LP (Donovan 4200 LP). Donovan add a <span class="cardName">Huaquero of the Golden Land</span> from his Deck to the hand.</p>
       <p>Donovan Set<sup>6</sup> a Spell/Trap in Spell &amp; Trap Zone 3.</p>
     </div>
     <div class="turn-p2">
