--- a/duels/13mar21/match11/duel2.html
+++ b/duels/13mar21/match11/duel2.html
@@ -11,17 +11,25 @@
   </div>
   <div id="duelScript">
     <div class="turn-p1">
-      <p>Donovan Set<sup>1&rarr;5</sup> 5 Spells/Traps in all the Spell &amp; Trap Zones.</p>
+      <p>Donovan Set<sup>1&rarr;5</sup> a Spell/Trap in each Spell &amp; Trap Zone.</p>
     </div>
     <div class="turn-p2">
-      <p>Kristian activate an <span class="cardName">Evenly Matched</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 3. Donovan chain the activation of his Set<sup>1</sup> <span class="cardName">Solemn Judgment</span><sup>1</sup>, paying 4000 LP (Donovan 4000 LP). Chain Link 2 resolve: Donovan negate the activation of Chain Link 1 and destroy Kristian's <span class="cardName">Evenly Matched</span><sup>1</sup>. Chain Link 1 does not resolve.</p>
+      <p class="activation">Kristian activate an <span class="cardName">Evenly Matched</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 3.</p><div class="chain">
+        <p>Donovan activate his Set<sup>1</sup> <span class="cardName">Solemn Judgment</span><sup>1</sup>, paying 4000 LP (Donovan 4000 LP). Donovan negate the activation of Chain Link 1 and destroy Kristian's <span class="cardName">Evenly Matched</span><sup>1</sup>.</p>
+      </div><p class="resolution">The effect does not resolve.</p>
       <p>Kristian Normal Summon a <span class="cardName">The Phantom Knights of Ragged Gloves</span><sup>1</sup> from his hand to Monster Zone 2 in Attack Position.</p>
       <p>Kristian activate the effect of a <span class="cardName">Kagemucha Knight</span> in his hand. Kristian Special Summon a <span class="cardName">Kagemucha Knight</span><sup>1</sup> from his hand to Monster Zone 3 in Attack Position.</p>
       <p>Kristian set the Link Arrows with his <span class="cardName">The Phantom Knights of Ragged Gloves</span><sup>1</sup> and his <span class="cardName">Kagemucha Knight</span><sup>1</sup> to Link Summon a <span class="cardName">Cherubini, Ebon Angel of the Burning Abyss</span><sup>1</sup> to the left-hand Extra Monster Zone.</p>
-      <p>Kristian activate the effect of his <span class="cardName">Cherubini, Ebon Angel of the Burning Abyss</span><sup>1</sup>, sending a <span class="cardName">Graff, Malebranche of the Burning Abyss</span><sup>1</sup> from his Deck to the GY, then target his <span class="cardName">Cherubini, Ebon Angel of the Burning Abyss</span><sup>1</sup>. Donovan chain the activation of his Set<sup>2</sup> <span class="cardName">Summon Limit</span><sup>1</sup>. Chain Link 2 resolve. Chain Link 1 resolve.</p>
+      <p class="activation">Kristian activate the effect of his <span class="cardName">Cherubini, Ebon Angel of the Burning Abyss</span><sup>1</sup>, sending a <span class="cardName">Graff, Malebranche of the Burning Abyss</span><sup>1</sup> from his Deck to the GY, then target his <span class="cardName">Cherubini, Ebon Angel of the Burning Abyss</span><sup>1</sup>.</p><div class="chain">
+        <p>Donovan activate his Set<sup>2</sup> <span class="cardName">Summon Limit</span><sup>1</sup>. Its effects apply.</p>
+      </div><p class="resolution">The effect resolve.</p>
       <p>Kristian activate the effect of his <span class="cardName">The Phantom Knights of Ragged Gloves</span><sup>1</sup>, banishing it. Kristian send a <span class="cardName">The Phantom Knights of Ancient Cloak</span><sup>1</sup> from his Deck to the GY.</p>
       <p>Kristian activate the effect of his <span class="cardName">The Phantom Knights of Ancient Cloak</span><sup>1</sup>, banishing it. Kristian add a <span class="cardName">The Phantom Knights of Torn Scales</span> from his Deck to the hand.</p>
-      <p>Donovan activate his Set<sup>4</sup> <span class="cardName">Eldlixir of Scarlet Sanguine</span><sup>1</sup>. Kristian chain the effect of an <span class="cardName">Ash Blossom &amp; Joyous Spring</span><sup>1</sup> in his hand, discarding it. Donovan chain the activation of his Set<sup>5</sup> <span class="cardName">Solemn Strike</span><sup>1</sup>, paying 1500 LP (Donovan 2500 LP). Chain Link 3 resolve: Donovan negate the activation of Chain Link 2. Chain Link 2 does not resolve. Chain Link 1 resolve: Donovan Special Summon an <span class="cardName">Eldlich the Golden Lord</span><sup>1</sup> from his Deck to Monster Zone 5 in Defense Position.</p>
+      <p class="activation">Donovan activate his Set<sup>4</sup> <span class="cardName">Eldlixir of Scarlet Sanguine</span><sup>1</sup>.</p><div class="chain">
+        <p class="activation">Kristian activate the effect of an <span class="cardName">Ash Blossom &amp; Joyous Spring</span><sup>1</sup> in his hand, discarding it.</p><div class="chain">
+          <p>Donovan activate his Set<sup>5</sup> <span class="cardName">Solemn Strike</span><sup>1</sup>, paying 1500 LP (Donovan 2500 LP). Donovan negate the activation of Chain Link 2.</p>
+        </div><p class="resolution">The effect does not resolve.</p>
+      </div><p class="resolution">Donovan Special Summon an <span class="cardName">Eldlich the Golden Lord</span><sup>1</sup> from his Deck to Monster Zone 5 in Defense Position.</p>
     </div>
     <div class="turn-p1">
       <p>Donovan change his <span class="cardName">Eldlich the Golden Lord</span><sup>1</sup> to Attack Position.</p>
