--- a/duels/13mar21/match11/duel3.html
+++ b/duels/13mar21/match11/duel3.html
@@ -13,7 +13,7 @@
     <div class="turn-p1">
       <p>Kristian Normal Summon a <span class="cardName">Tour Guide From the Underworld</span><sup>1</sup> from his hand to Monster Zone 3 in Attack Position.</p>
       <p>Kristian activate the effect of his <span class="cardName">Tour Guide From the Underworld</span><sup>1</sup>. Kristian Special Summon a <span class="cardName">Graff, Malebranche of the Burning Abyss</span><sup>1</sup> from his Deck to Monster Zone 4 in Defense Position.</p>
-      <p class="note">Kristian's <span class="cardName">Graff, Malebranche of the Burning Abyss</span><sup>1</sup> has its effects negated.</p>
+      <p class="note">Kristian's <span class="cardName">Graff, Malebranche of the Burning Abyss</span><sup>1</sup> have its effects negated.</p>
       <p>Donovan activate the effect of a <span class="cardName">Dimension Shifter</span><sup>1</sup> in his hand, sending it to the GY. The effect resolve.</p>
       <p class="note">Until the end of next turn, any card sent to the GY is banished instead.</p>
       <p>Kristian Set<sup>1</sup> a Spell/Trap in Spell &amp; Trap Zone 2.</p>
@@ -36,7 +36,7 @@
     </div>
     <div class="turn-p1">
       <p>Kristian Normal Summon a <span class="cardName">The Phantom Knights of Torn Scales</span><sup>1</sup> from his hand to Monster Zone 3 in Attack Position.</p>
-      <p class="note">The effect of Kristian's <span class="cardName">Cir, Malebranche of the Burning Abyss</span><sup>1</sup> apply.</p>
+      <p class="note">Kristian's <span class="cardName">Cir, Malebranche of the Burning Abyss</span><sup>1</sup> apply its effect.</p>
       <p>Kristian destroy his <span class="cardName">Cir, Malebranche of the Burning Abyss</span><sup>1</sup>.</p>
       <p>Donovan activate his Set<sup>5</sup> <span class="cardName">Ice Dragon's Prison</span><sup>1</sup>, targeting Kristian's <span class="cardName">The Phantom Knights of Silent Boots</span><sup>1</sup>. Donovan banish Kristian's <span class="cardName">The Phantom Knights of Silent Boots</span><sup>1</sup> and Kristian's <span class="cardName">The Phantom Knights of Torn Scales</span><sup>1</sup>.</p>
     </div>
@@ -62,7 +62,9 @@
     </div>
     <div class="turn-p1">
       <p>Kristian activate the effect of his <span class="cardName">The Phantom Knights of Ragged Gloves</span><sup>1</sup>, banishing it. Kristian send a <span class="cardName">The Phantom Knights of Ancient Cloak</span><sup>1</sup> from his Deck to the GY.</p>
-      <p>Kristian activate the effect of his <span class="cardName">The Phantom Knights of Ancient Cloak</span><sup>1</sup>, banishing it. Donovan chain the activation of his Set<sup>2</sup> <span class="cardName">Solemn Strike</span><sup>1</sup>, paying 1500 LP (Donovan 4900 LP). Chain Link 2 resolve: Donovan negate the activation of Chain Link 1. Chain Link 1 does not resolve.</p>
+      <p class="activation">Kristian activate the effect of his <span class="cardName">The Phantom Knights of Ancient Cloak</span><sup>1</sup>, banishing it.</p><div class="chain">
+        <p>Donovan activate his Set<sup>2</sup> <span class="cardName">Solemn Strike</span><sup>1</sup>, paying 1500 LP (Donovan 4900 LP). Donovan negate the activation of Chain Link 1.</p>
+      </div><p class="resolution">The effect does not resolve.</p>
       <p>Kristian concede.</p>
     </div>
   </div>
