--- a/duels/13mar21/match12/duel2.html
+++ b/duels/13mar21/match12/duel2.html
@@ -18,9 +18,11 @@
       <p>Alex Set<sup>1&rarr;3</sup> 3 Spells/Traps in Spell &amp; Trap Zones 1, 2, and 3.</p>
     </div>
     <div class="turn-p2">
-      <p>Alex activate his Set<sup>3</sup> <span class="cardName">Anti-Spell Fragrance</span><sup>1</sup>.</p>
+      <p>Alex activate his Set<sup>3</sup> <span class="cardName">Anti-Spell Fragrance</span><sup>1</sup>. Its effects apply.</p>
       <p>Marco Normal Summon a <span class="cardName">Virtual World Hime - Nyannyan</span><sup>1</sup> from his hand to Monster Zone 3 in Attack Position.</p>
-      <p>Marco activate the effect of a <span class="cardName">Virtual World Kirin - Lili</span> in his hand, targeting his <span class="cardName">Virtual World Hime - Nyannyan</span><sup>1</sup>. Alex chain the activation of his Set<sup>1</sup> <span class="cardName">Dragonmaid Tidying</span><sup>1</sup>, targeting his <span class="cardName">White Dragon Wyverburster</span><sup>1</sup> and Marco's <span class="cardName">Virtual World Hime - Nyannyan</span><sup>1</sup>. Chain Link 2 resolve: Alex return his <span class="cardName">White Dragon Wyverburster</span><sup>1</sup> and Marco's <span class="cardName">Virtual World Hime - Nyannyan</span><sup>1</sup> to the hand. Chain Link 1 resolve without effect.</p>
+      <p class="activation">Marco activate the effect of a <span class="cardName">Virtual World Kirin - Lili</span> in his hand, targeting his <span class="cardName">Virtual World Hime - Nyannyan</span><sup>1</sup>.</p><div class="chain">
+        <p>Alex activate his Set<sup>1</sup> <span class="cardName">Dragonmaid Tidying</span><sup>1</sup>, targeting his <span class="cardName">White Dragon Wyverburster</span><sup>1</sup> and Marco's <span class="cardName">Virtual World Hime - Nyannyan</span><sup>1</sup>. Alex return to the hand his <span class="cardName">White Dragon Wyverburster</span><sup>1</sup> and Marco's <span class="cardName">Virtual World Hime - Nyannyan</span><sup>1</sup>.</p>
+      </div><p class="resolution">The effect fizzle.</p>
       <p>Marco Set<sup>4&rarr;5</sup> 2 Spells/Traps in Spell &amp; Trap Zones 1 and 2.</p>
     </div>
     <div class="turn-p1">
@@ -37,7 +39,7 @@
       <p>Marco declare an attack on Alex's <span class="cardName">Hieratic Seal of the Heavenly Spheres</span><sup>1</sup> with his <span class="cardName">Virtual World Hime - Nyannyan</span><sup>2</sup>.</p>
       <p>Alex activate the effect of his <span class="cardName">Hieratic Seal of the Heavenly Spheres</span><sup>1</sup>, Tributing it. Alex return Marco's <span class="cardName">Virtual World Hime - Nyannyan</span><sup>2</sup> to the hand.</p>
       <p>Alex activate the effect of his <span class="cardName">Hieratic Seal of the Heavenly Spheres</span><sup>1</sup>. Alex Special Summon a <span class="cardName">Rokket Tracer</span><sup>1</sup> from his Deck to Monster Zone 5 in Defense Position.</p>
-      <p>Marco activate his Set<sup>5</sup> <span class="cardName">Virtual World Gate - Chuche</span><sup>1</sup>.</p>
+      <p>Marco activate his Set<sup>5</sup> <span class="cardName">Virtual World Gate - Chuche</span><sup>1</sup>. Its effects apply.</p>
       <p>Marco activate the effect of a <span class="cardName">Virtual World Kirin - Lili</span> in his hand, targeting his <span class="cardName">Virtual World Gate - Chuche</span><sup>1</sup>. Marco send a <span class="cardName">Virtual World Gate - Qinglong</span><sup>1</sup> from his Deck to the GY and Special Summon a <span class="cardName">Virtual World Kirin - Lili</span><sup>1</sup> from his hand to Monster Zone 3 in Defense Position, then send a <span class="cardName">Virtual World Hime - Nyannyan</span><sup>3</sup> from his Deck to the GY.</p>
       <p>Marco activate the effect of his <span class="cardName">Virtual World Gate - Qinglong</span><sup>1</sup>, banishing it. Marco add a <span class="cardName">Virtual World Mai-Hime - Lulu</span> from his Deck to the hand, then send an <span class="cardName">Emergency Teleport</span><sup>1</sup> from his hand to the GY.</p>
       <p>Marco activate the effect of a <span class="cardName">Virtual World Mai-Hime - Lulu</span> in his hand, targeting his <span class="cardName">Virtual World Gate - Chuche</span><sup>1</sup>. Marco send a <span class="cardName">Virtual World Gate - Qinglong</span><sup>2</sup> from his Deck to the GY and Special Summon a <span class="cardName">Virtual World Mai-Hime - Lulu</span><sup>1</sup> from his hand to Monster Zone 4 in Defense Position, then add a <span class="cardName">Virtual World Xiezhi - Jiji</span> from his Deck to the hand.</p>
@@ -56,7 +58,7 @@
       <p>Marco activate the effect of his <span class="cardName">Cloudcastle</span><sup>1</sup>, targeting his <span class="cardName">Vermillion Dragon Mech</span><sup>1</sup>. Marco Special Summon his <span class="cardName">Vermillion Dragon Mech</span><sup>1</sup> to Monster Zone 4 in Attack Position.</p>
       <p>Marco activate the effect of his <span class="cardName">Vermillion Dragon Mech</span><sup>1</sup>, banishing his <span class="cardName">Virtual World Roshi - Laolao</span><sup>1</sup>, then target Alex's <span class="cardName">Rokket Tracer</span><sup>1</sup>. Marco destroy Alex's <span class="cardName">Rokket Tracer</span><sup>1</sup>.</p>
       <p>Marco overlay his <span class="cardName">Cloudcastle</span><sup>1</sup> and his <span class="cardName">Vermillion Dragon Mech</span><sup>1</sup> to Xyz Summon a <span class="cardName">True King of All Calamities</span><sup>2</sup> to Monster Zone 5 in Defense Position.</p>
-      <p class="note">The effect of Marco's <span class="cardName">Virtual World Xiezhi - Jiji</span><sup>1</sup> apply.</p>
+      <p class="note">Marco's <span class="cardName">Virtual World Xiezhi - Jiji</span><sup>1</sup> apply its effect.</p>
       <p>Marco add his <span class="cardName">Virtual World Mai-Hime - Lulu</span><sup>2</sup> to the hand.</p>
     </div>
     <div class="turn-p1">
