--- a/duels/13mar21/match15/duel2.html
+++ b/duels/13mar21/match15/duel2.html
@@ -32,11 +32,13 @@
       <p>Daniel activate the effect of his <span class="cardName">Beatrice, Lady of the Eternal</span><sup>1</sup>, detaching his <span class="cardName">Virtual World Oto-Hime - Toutou</span><sup>1</sup>. Daniel send an <span class="cardName">Ash Blossom &amp; Joyous Spring</span><sup>1</sup> from his Deck to the GY.</p>
       <p>Daniel activate the effect of his <span class="cardName">Constellar Ptolemy M7</span><sup>1</sup>, detaching his <span class="cardName">Virtual World Kirin - Lili</span><sup>1</sup>, then target his <span class="cardName">Ash Blossom &amp; Joyous Spring</span><sup>1</sup>. Daniel return his <span class="cardName">Ash Blossom &amp; Joyous Spring</span><sup>1</sup> to the hand.</p>
       <p>Daniel Set<sup>1</sup> a Spell/Trap in Spell &amp; Trap Zone 3.</p>
-      <p class="note">The effect of Daniel's <span class="cardName">Virtual World Xiezhi - Jiji</span><sup>1</sup> apply.</p>
+      <p class="note">Daniel's <span class="cardName">Virtual World Xiezhi - Jiji</span><sup>1</sup> apply its effect.</p>
       <p>Daniel add his <span class="cardName">Virtual World Mai-Hime - Lulu</span><sup>1</sup> to the hand.</p>
     </div>
     <div class="turn-p2">
-      <p>Donovan activate a <span class="cardName">Red-Eyes Fusion</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 3. Daniel chain the effect of an <span class="cardName">Ash Blossom &amp; Joyous Spring</span><sup>2</sup> in his hand, discarding it. Chain Link 2 resolve: Daniel negate the effect of Chain Link 1. Chain Link 1 resolve without effect.</p>
+      <p class="activation">Donovan activate a <span class="cardName">Red-Eyes Fusion</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 3.</p><div class="chain">
+        <p>Daniel activate the effect of an <span class="cardName">Ash Blossom &amp; Joyous Spring</span><sup>2</sup> in his hand, discarding it. Daniel negate the effect of Chain Link 1.</p>
+      </div><p class="resolution">The effect fizzle.</p>
       <p>Donovan Set<sup>2&rarr;5</sup> 4 Spells/Traps in Spell &amp; Trap Zones 2, 3, 4, and 5.</p>
     </div>
     <div class="turn-p1">
