--- a/duels/13mar21/match3/duel1.html
+++ b/duels/13mar21/match3/duel1.html
@@ -14,8 +14,10 @@
       <p>Joshua activate a <span class="cardName">Pot of Prosperity</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 3, banishing face-down 6 cards from his Extra Deck. Joshua excavate from his Deck an <span class="cardName">Eldlich the Golden Lord</span>, a <span class="cardName">Droll &amp; Lock Bird</span>, a <span class="cardName">Zoodiac Thoroughblade</span>, a <span class="cardName">Zoodiac Whiptail</span>, an <span class="cardName">Artifact Lancea</span>, and a <span class="cardName">Fire Formation - Tenki</span>. Joshua add a <span class="cardName">Fire Formation - Tenki</span> from his Deck to the hand and place the rest on the bottom of his Deck.</p>
       <p>Joshua activate a <span class="cardName">Fire Formation - Tenki</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 4. Joshua add a <span class="cardName">Zoodiac Ratpier</span> from his Deck to the hand.</p>
       <p>Joshua Normal Summon a <span class="cardName">Zoodiac Ratpier</span><sup>1</sup> from his hand to Monster Zone 3 in Attack Position.</p>
-      <p>Joshua activate the effect of his <span class="cardName">Zoodiac Ratpier</span><sup>1</sup>. Jamie chain the effect of a <span class="cardName">Ghost Ogre &amp; Snow Rabbit</span><sup>1</sup> in his hand, sending it to the GY. Chain Link 2 resolve: Jamie destroy Joshua's <span class="cardName">Zoodiac Ratpier</span><sup>1</sup>. Chain Link 1 resolve: Joshua send a <span class="cardName">Zoodiac Combo</span><sup>1</sup> from his Deck to the GY.</p>
-      <p>Joshua activate a <span class="cardName">Cursed Eldland</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 3.</p>
+      <p class="activation">Joshua activate the effect of his <span class="cardName">Zoodiac Ratpier</span><sup>1</sup>.</p><div class="chain">
+        <p>Jamie activate the effect of a <span class="cardName">Ghost Ogre &amp; Snow Rabbit</span><sup>1</sup> in his hand, sending it to the GY. Jamie destroy Joshua's <span class="cardName">Zoodiac Ratpier</span><sup>1</sup>.</p>
+      </div><p class="resolution">Joshua send a <span class="cardName">Zoodiac Combo</span><sup>1</sup> from his Deck to the GY.</p>
+      <p>Joshua activate a <span class="cardName">Cursed Eldland</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 3. Its effects apply.</p>
       <p>Joshua activate the effect of his <span class="cardName">Cursed Eldland</span><sup>1</sup>, paying 800 LP (Joshua 7200 LP). Joshua add a <span class="cardName">Huaquero of the Golden Land</span> from his Deck to the hand.</p>
       <p>Joshua Set<sup>1</sup> a Spell/Trap in Spell &amp; Trap Zone 2.</p>
     </div>
@@ -26,8 +28,8 @@
     <div class="turn-p1">
       <p>Joshua Normal Summon a <span class="cardName">Zoodiac Thoroughblade</span><sup>1</sup> from his hand to Monster Zone 3 in Attack Position.</p>
       <p>Joshua overlay his <span class="cardName">Zoodiac Thoroughblade</span><sup>1</sup> to Xyz Summon a <span class="cardName">Zoodiac Boarbow</span><sup>1</sup> to Monster Zone 3 in Attack Position.</p>
-      <p>Joshua overlay his <span class="cardName">Zoodiac Boarbow</span><sup>1</sup> to Xyz Summon a <span class="cardName">Zoodiac Drident</span><sup>1</sup> to Monster Zone 3 in Attack Position.</p>
       <p>Joshua attack directly with his <span class="cardName">Huaquero of the Golden Land</span><sup>1</sup>. Jamie take 1800 battle damage (Jamie 6200 LP).</p>
+      <p>Joshua overlay his <span class="cardName">Zoodiac Boarbow</span><sup>1</sup> to Xyz Summon a <span class="cardName">Zoodiac Drident</span><sup>1</sup> to Monster Zone 3 in Attack Position.</p>
       <p>Joshua activate the effect of his <span class="cardName">Cursed Eldland</span><sup>1</sup>, paying 800 LP (Joshua 6400 LP). Joshua add a <span class="cardName">Huaquero of the Golden Land</span> from his Deck to the hand.</p>
       <p>Joshua Set<sup>2&rarr;3</sup> 2 Spells/Traps in Spell &amp; Trap Zones 1 and 2.</p>
       <p>Joshua set the Link Arrow with his <span class="cardName">Huaquero of the Golden Land</span><sup>1</sup> to Link Summon a <span class="cardName">Link Spider</span><sup>1</sup> to the left-hand Extra Monster Zone.</p>
