--- a/description/6172122.html
+++ b/description/6172122.html
@@ -14,7 +14,7 @@
   </div>
   
   <div id="info">
-    <p class="cardText">You can only activate 1 "Red-Eyes Fusion" per turn. You cannot Normal or Special Summon other monsters the turn you activate this card.</p>
+    <p class="cardText">You can only activate 1 "Red-Eyes Fusion" per turn. You cannot Normal or Special Summon other monsters during the turn you activate this card.</p>
     <p class="effect">
       <span class="effectNumber">&#9312;: </span>
       <span class="condition"></span>
