--- a/duels/13mar21/match5/duel1.html
+++ b/duels/13mar21/match5/duel1.html
@@ -3,6 +3,7 @@
   <link rel="stylesheet" href="../../duel-style.css">
   <script src="../../duel-script.js"></script>
 </head>
+<!-- random comment -->
 
 <body>
   <div id="cardInfo">
