add duels and descriptions

--- a/duels/13mar21/index.html
+++ b/duels/13mar21/index.html
@@ -36,6 +36,8 @@
         <a href="match5/duel1.html">Duel 1</a><br>
         <a href="match5/duel2.html">Duel 2</a>
       <h3>Match 6: Kristian Pašić VS Sven-Ole Wegner</h3>
+        <a href="match6/duel1.html">Duel 1</a><br>
+        <a href="match6/duel2.html">Duel 2</a>
       <h3>Match 7: Aleksandar Sokolović VS Marco Sánchez</h3>
       <h3>Match 8: Adrian Dursun VS Alex Robertson</h3>
     <hr>
