--- a/description/4280258.html
+++ b/description/4280258.html
@@ -28,7 +28,7 @@
       <span class="condition"></span>
       <span class="activation"></span>
       <span class="resolution"></span>
-      The original ATK of this card is 800 &times; the number of Link Materials used for its Link Summon.
+      The original ATK of this card is 800 &times; the number of materials used for its Link Summon.
     </p>
     <p class="effect">
       <span class="effectNumber">&#9313;: </span>
