--- a/duels/13mar21/match5/duel1.html
+++ b/duels/13mar21/match5/duel1.html
@@ -58,7 +58,7 @@
       <p class="activation">Donovan activate his Set<sup>13</sup> <span class="cardName">Conquistador of the Golden Land</span><sup>2</sup>.</p><div class="chain">
         <p>Donovan activate his Set<sup>14</sup> <span class="cardName">Eldlixir of Scarlet Sanguine</span><sup>2</sup>. Donovan Special Summon his <span class="cardName">Eldlich the Golden Lord</span><sup>1</sup> to Monster Zone 5 in Attack Position.</p>
       </div><p class="resolution">Donovan Special Summon his <span class="cardName">Conquistador of the Golden Land</span><sup>2</sup> to Monster Zone 3 in Defense Position, then destroy Joshua's <span class="cardName">Altergeist Protocol</span><sup>1</sup>.</p>
-      <p class="error">Illegal activation: Joshua's <span class="cardName">Torrential Tribute</span><sup>2</sup> missed timing.</p>
+      <p class="error"><b>Illegal activation:</b> Joshua's <span class="cardName">Torrential Tribute</span><sup>2</sup> missed timing.</p>
       <p><span class="error">Joshua activate his Set<sup>7</sup> <span class="cardName">Torrential Tribute</span><sup>2</sup>.</span> Joshua destroy his <span class="cardName">Altergeist Multifaker</span><sup>1</sup>, Donovan's <span class="cardName">Eldlich the Golden Lord</span><sup>1</sup>, and Donovan's <span class="cardName">Conquistador of the Golden Land</span><sup>2</sup>.</p>
     </div>
     <div class="turn-p1">
