add duels and descriptions

--- a/duels/13mar21/index.html
+++ b/duels/13mar21/index.html
@@ -39,6 +39,8 @@
         <a href="match6/duel1.html">Duel 1</a><br>
         <a href="match6/duel2.html">Duel 2</a>
       <h3>Match 7: Aleksandar Sokolović VS Marco Sánchez</h3>
+        <a href="match7/duel1.html">Duel 1</a><br>
+        <a href="match7/duel2.html">Duel 2</a>
       <h3>Match 8: Adrian Dursun VS Alex Robertson</h3>
     <hr>
     <h2>Quarterfinals</h2>
