update Spell/Trap activations

--- a/duels/13mar21/match1/duel2.html
+++ b/duels/13mar21/match1/duel2.html
@@ -14,7 +14,7 @@
       <p>Leonardo Set<sup>1&rarr;2</sup> 2 Spells/Traps in Spell &amp; Trap Zones 1 and 5.</p>
     </div>
     <div class="turn-p2">
-      <p>Leonardo activate his Set<sup>1</sup> <span class="cardName">Mind Drain</span><sup>1</sup>, paying 1000 LP (Leonardo 7000 LP). Its effects apply.</p>
+      <p>Leonardo activate his Set<sup>1</sup> <span class="cardName">Mind Drain</span><sup>1</sup>, paying 1000 LP (Leonardo 7000 LP). Its effects resolve.</p>
       <p>Daniel activate an <span class="cardName">Emergency Teleport</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 4. Daniel Special Summon a <span class="cardName">Virtual World Hime - Nyannyan</span><sup>1</sup> from his Deck to Monster Zone 3 in Attack Position.</p>
       <p>Daniel Normal Summon a <span class="cardName">Virtual World Mai-Hime - Lulu</span><sup>1</sup> from his hand to Monster Zone 4 in Attack Position.</p>
       <p>Daniel tune his <span class="cardName">Virtual World Mai-Hime - Lulu</span><sup>1</sup> with his <span class="cardName">Virtual World Hime - Nyannyan</span><sup>1</sup> to Synchro Summon a <span class="cardName">Virtual World Beast - Jiujiu</span><sup>1</sup> to Monster Zone 2 in Attack Position.</p>
