--- a/duels/13mar21/match13/duel1.html
+++ b/duels/13mar21/match13/duel1.html
@@ -23,7 +23,7 @@
       <p>Daniel tune his <span class="cardName">Virtual World Mai-Hime - Lulu</span><sup>1</sup> with his <span class="cardName">Virtual World Hime - Nyannyan</span><sup>1</sup> to Synchro Summon a <span class="cardName">Virtual World Beast - Jiujiu</span><sup>1</sup> to Monster Zone 1 in Attack Position.</p>
       <p>Daniel overlay his <span class="cardName">Virtual World Roshi - Laolao</span><sup>1</sup> and his <span class="cardName">Virtual World Beast - Jiujiu</span><sup>1</sup> to Xyz Summon a <span class="cardName">Constellar Ptolemy M7</span><sup>1</sup> to Monster Zone 1 in Defense Position.</p>
       <p>Daniel activate the effect of his <span class="cardName">Constellar Ptolemy M7</span><sup>1</sup>, detaching his <span class="cardName">Virtual World Roshi - Laolao</span><sup>1</sup>, then target his <span class="cardName">Ash Blossom &amp; Joyous Spring</span><sup>1</sup>. Daniel return his <span class="cardName">Ash Blossom &amp; Joyous Spring</span><sup>1</sup> to the hand.</p>
-      <p>Daniel activate a <span class="cardName">Virtual World Gate - Qinglong</span><sup>2</sup> from his hand in Spell &amp; Trap Zone 4. Its effects apply.</p>
+      <p>Daniel activate a <span class="cardName">Virtual World Gate - Qinglong</span><sup>2</sup> from his hand in Spell &amp; Trap Zone 4. Its effects resolve.</p>
       <p>Daniel activate the effect of his <span class="cardName">Virtual World Gate - Qinglong</span><sup>2</sup>, banishing his <span class="cardName">Virtual World City - Kauwloon</span><sup>2</sup>, then target his <span class="cardName">Beatrice, Lady of the Eternal</span><sup>1</sup>. The effect resolve.</p>
     </div>
     <div class="turn-p2">
