--- a/duels/13mar21/match13/duel2.html
+++ b/duels/13mar21/match13/duel2.html
@@ -26,7 +26,7 @@
     <div class="turn-p2">
       <p>Marijn activate a <span class="cardName">Pot of Extravagance</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 3, banishing face-down 6 cards from his Extra Deck. Marijn draw 2 cards.</p>
       <p>Marijn activate the effect of an <span class="cardName">Eldlich the Golden Lord</span><sup>1</sup> in his hand, sending it and a <span class="cardName">Cursed Eldland</span><sup>1</sup> from his hand to the GY, then target Daniel's <span class="cardName">Virtual World Kyubi - Shenshen</span><sup>1</sup>. Marijn send Daniel's <span class="cardName">Virtual World Kyubi - Shenshen</span><sup>1</sup> to the GY.</p>
-      <p>Marijn activate a <span class="cardName">Cursed Eldland</span><sup>2</sup> from his hand in Spell &amp; Trap Zone 3. Its effects apply.</p>
+      <p>Marijn activate a <span class="cardName">Cursed Eldland</span><sup>2</sup> from his hand in Spell &amp; Trap Zone 3. Its effects resolve.</p>
       <p>Marijn activate the effect of his <span class="cardName">Cursed Eldland</span><sup>2</sup>, paying 800 LP (Marijn 7200 LP). Marijn add a <span class="cardName">Huaquero of the Golden Land</span> from his Deck to the hand.</p>
       <p>Marijn activate the effect of his <span class="cardName">Eldlich the Golden Lord</span><sup>1</sup>, sending his <span class="cardName">Cursed Eldland</span><sup>2</sup> to the GY. Marijn Special Summon his <span class="cardName">Eldlich the Golden Lord</span><sup>1</sup> to Monster Zone 3 in Attack Position.</p>
       <p class="note">Marijn's <span class="cardName">Eldlich the Golden Lord</span><sup>1</sup> gain 1000 ATK until the end of next turn.</p>
