--- a/duels/13mar21/match5/duel1.html
+++ b/duels/13mar21/match5/duel1.html
@@ -26,7 +26,7 @@
       <p>Donovan attack directly with his <span class="cardName">Link Spider</span><sup>1</sup>. Joshua take 1000 battle damage (Joshua 7000 LP).</p>
       <p>Donovan Set<sup>10</sup> a Spell/Trap in Spell &amp; Trap Zone 2.</p>
       <p>Donovan activate the effect of his <span class="cardName">Conquistador of the Golden Land</span><sup>1</sup>, banishing it. Donovan Set<sup>11</sup> an <span class="cardName">Eldlixir of Scarlet Sanguine</span><sup>1</sup> from his Deck in Spell &amp; Trap Zone 5.</p>
-      <p>Joshua activate his Set<sup>8</sup> <span class="cardName">Altergeist Protocol</span><sup>1</sup>. Its effects apply.</p>
+      <p>Joshua activate his Set<sup>8</sup> <span class="cardName">Altergeist Protocol</span><sup>1</sup>. Its effects resolve.</p>
       <p class="activation">Joshua activate the effect of an <span class="cardName">Altergeist Multifaker</span> in his hand.</p><div class="chain">
         <p>Donovan activate his Set<sup>1</sup> <span class="cardName">Solemn Strike</span><sup>1</sup>, paying 1500 LP (Donovan 6500 LP). Donovan negate the activation of Chain Link 1 and destroy an <span class="cardName">Altergeist Multifaker</span><sup>1</sup> in Joshua's hand.</p>
       </div><p class="resolution">The effect does not resolve.</p>
