--- a/duels/13mar21/match5/duel2.html
+++ b/duels/13mar21/match5/duel2.html
@@ -12,11 +12,11 @@
   <div id="duelScript">
     <div class="turn-p1">
       <p>Joshua Set<sup>1&rarr;3</sup> 3 Spells/Traps in Spell &amp; Trap Zones 2, 3, and 4.</p>
-      <p>Joshua Normal Set<sup>4</sup> a monster from his hand in Monster Zone 1.</p>
+      <p>Joshua Normal Set<sup>4</sup> a monster in Monster Zone 1.</p>
     </div>
     <div class="turn-p2">
       <p class="activation">Donovan activate a <span class="cardName">Pot of Extravagance</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 1, banishing face-down 6 cards from his Extra Deck.</p><div class="chain">
-        <p>Joshua activate his Set<sup>2</sup> <span class="cardName">Imperial Order</span><sup>1</sup>. Its effects apply.</p>
+        <p>Joshua activate his Set<sup>2</sup> <span class="cardName">Imperial Order</span><sup>1</sup>. Its effects resolve.</p>
       </div><p class="resolution">The effect fizzle.</p>
       <p>Donovan activate an <span class="cardName">Evenly Matched</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 1. Joshua banish face-down his Set<sup>1</sup> Spell/Trap, his Set<sup>3</sup> Spell/Trap, and his Set<sup>4</sup> monster.</p>
       <p>Donovan Set<sup>5&rarr;6</sup> 2 Spells/Traps in Spell &amp; Trap Zones 1 and 5.</p>
