--- a/duels/13mar21/match9/duel3.html
+++ b/duels/13mar21/match9/duel3.html
@@ -37,7 +37,7 @@
       <p>Daniel overlay his <span class="cardName">Beatrice, Lady of the Eternal</span><sup>1</sup> to Xyz Summon a <span class="cardName">Gaia Dragon, the Thunder Charger</span><sup>1</sup> to Monster Zone 4 in Attack Position.</p>
       <p>Daniel attack directly with his <span class="cardName">Gaia Dragon, the Thunder Charger</span><sup>1</sup>. Danyllo take 2600 battle damage (Danyllo 5400 LP).</p>
       <p>Daniel overlay his <span class="cardName">Gaia Dragon, the Thunder Charger</span><sup>1</sup> to Xyz Summon a <span class="cardName">Divine Arsenal AA-ZEUS - Sky Thunder</span><sup>1</sup> to Monster Zone 5 in Defense Position.</p>
-      <p>Danyllo activate his Set<sup>2</sup> <span class="cardName">Virtual World Gate - Xuanwu</span><sup>1</sup>. Its effects apply.</p>
+      <p>Danyllo activate his Set<sup>2</sup> <span class="cardName">Virtual World Gate - Xuanwu</span><sup>1</sup>. Its effects resolve.</p>
     </div>
     <div class="turn-p2">
       <p>Danyllo activate a <span class="cardName">Virtual World City - Kauwloon</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 4. Danyllo place a <span class="cardName">Virtual World Gate - Qinglong</span><sup>3</sup> from his Deck face-up in Spell &amp; Trap Zone 2.</p>
