--- a/duels/13mar21/match1/duel1.html
+++ b/duels/13mar21/match1/duel1.html
@@ -31,7 +31,7 @@
       <p>Daniel add his <span class="cardName">Virtual World Mai-Hime - Lulu</span><sup>1</sup> to the hand.</p>
     </div>
     <div class="turn-p2">
-      <p>Leonardo activate a <span class="cardName">Cursed Eldland</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 1. Its effects apply.</p>
+      <p>Leonardo activate a <span class="cardName">Cursed Eldland</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 1. Its effects resolve.</p>
       <p>Leonardo activate the effect of his <span class="cardName">Cursed Eldland</span><sup>1</sup>, paying 800 LP (Leonardo 7200 LP). Leonardo add a <span class="cardName">Huaquero of the Golden Land</span> from his Deck to the hand.</p>
       <p>Daniel activate the effect of his <span class="cardName">True King of All Calamities</span><sup>1</sup>, detaching his <span class="cardName">Virtual World Kyubi - Shenshen</span><sup>1</sup>. The effect resolve.</p>
       <p>Leonardo activate a <span class="cardName">Fire Formation - Tenki</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 3. Leonardo add a <span class="cardName">Zoodiac Bunnyblast</span> from his Deck to the hand.</p>
