--- a/duels/13mar21/match10/duel1.html
+++ b/duels/13mar21/match10/duel1.html
@@ -11,7 +11,7 @@
   </div>
   <div id="duelScript">
     <div class="turn-p1">
-      <p>Marijn activate a <span class="cardName">Cursed Eldland</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 1. Its effects apply.</p>
+      <p>Marijn activate a <span class="cardName">Cursed Eldland</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 1. Its effects resolve.</p>
       <p>Marijn activate the effect of his <span class="cardName">Cursed Eldland</span><sup>1</sup>, paying 800 LP (Marijn 7200 LP). Marijn add an <span class="cardName">Eldlich the Golden Lord</span> from his Deck to the hand.</p>
       <p>Marijn activate a <span class="cardName">Red-Eyes Fusion</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 3. Marijn fuse a <span class="cardName">Dark Magician</span><sup>1</sup> in his Deck and a <span class="cardName">Red-Eyes Black Dragon</span><sup>1</sup> in his Deck to Fusion Summon a <span class="cardName">Red-Eyes Dark Dragoon</span><sup>1</sup> to Monster Zone 5 in Attack Position.</p>
       <p>Marijn Set<sup>1&rarr;3</sup> 3 Spells/Traps in Spell &amp; Trap Zones 2, 3, and 4.</p>
