--- a/duels/13mar21/match11/duel1.html
+++ b/duels/13mar21/match11/duel1.html
@@ -34,7 +34,7 @@
       <p>Kristian Set<sup>5</sup> a Spell/Trap in Spell &amp; Trap Zone 2.</p>
     </div>
     <div class="turn-p1">
-      <p>Donovan activate a <span class="cardName">Cursed Eldland</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 2. Its effects apply.</p>
+      <p>Donovan activate a <span class="cardName">Cursed Eldland</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 2. Its effects resolve.</p>
       <p>Donovan activate the effect of his <span class="cardName">Cursed Eldland</span><sup>1</sup>, paying 800 LP (Donovan 4200 LP). Donovan add a <span class="cardName">Huaquero of the Golden Land</span> from his Deck to the hand.</p>
       <p>Donovan Set<sup>6</sup> a Spell/Trap in Spell &amp; Trap Zone 3.</p>
     </div>
