--- a/duels/13mar21/match13/duel3.html
+++ b/duels/13mar21/match13/duel3.html
@@ -12,7 +12,7 @@
   <div id="duelScript">
     <div class="turn-p1">
       <p>Marijn activate a <span class="cardName">Pot of Extravagance</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 3, banishing face-down 6 cards from his Extra Deck. Marijn draw 2 cards.</p>
-      <p>Marijn activate a <span class="cardName">Cursed Eldland</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 1. Its effects apply</p>
+      <p>Marijn activate a <span class="cardName">Cursed Eldland</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 1. Its effects resolve.</p>
       <p>Marijn activate the effect of his <span class="cardName">Cursed Eldland</span><sup>1</sup>, paying 800 LP (Marijn 7200 LP). Marijn add a <span class="cardName">Huaquero of the Golden Land</span> from his Deck to the hand.</p>
       <p>Marijn activate a <span class="cardName">Red-Eyes Fusion</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 3. Marijn fuse a <span class="cardName">Dark Magician</span><sup>1</sup> from his Deck and a <span class="cardName">Red-Eyes Black Dragon</span><sup>1</sup> from his Deck to Fusion Summon a <span class="cardName">Red-Eyes Dark Dragoon</span><sup>1</sup> to Monster Zone 5 in Attack Position.</p>
       <p>Marijn Set<sup>1&rarr;3</sup> 3 Spells/Traps in Spell &amp; Trap Zones 2, 3, and 4.</p>
