--- a/duels/13mar21/match15/duel3.html
+++ b/duels/13mar21/match15/duel3.html
@@ -26,7 +26,7 @@
       <p>Daniel activate the effect of a <span class="cardName">Virtual World Mai-Hime - Lulu</span> in his hand, targeting his <span class="cardName">Virtual World Gate - Chuche</span><sup>1</sup>. Daniel send a <span class="cardName">Virtual World Gate - Qinglong</span><sup>1</sup> from his Deck to the GY and Special Summon a <span class="cardName">Virtual World Mai-Hime - Lulu</span><sup>1</sup> from his hand to Monster Zone 3 in Attack Position, then add a <span class="cardName">Virtual World Roshi - Laolao</span> from his Deck to the hand.</p>
       <p class="activation">Donovan activate his Set<sup>1</sup> <span class="cardName">Summon Limit</span><sup>1</sup>.</p><div class="chain">
         <p class="activation">Daniel activate the effect of his <span class="cardName">Dinowrestler Pankratops</span>, Tributing it, then target Donovan's <span class="cardName">Summon Limit</span><sup>1</sup>.</p><div class="chain">
-          <p>Donovan activate his Set<sup>3</sup> <span class="cardName">Summon Limit</span><sup>2</sup>. Its effects apply.</p>
+          <p>Donovan activate his Set<sup>3</sup> <span class="cardName">Summon Limit</span><sup>2</sup>. Its effects resolve.</p>
         </div><p class="resolution">Daniel destroy Donovan's <span class="cardName">Summon Limit</span><sup>1</sup>.</p>
       </div><p class="resolution">Its effect fizzle.</p>
       <p>Daniel activate the effect of his <span class="cardName">Virtual World Gate - Qinglong</span><sup>1</sup>, banishing it. Daniel add a <span class="cardName">Virtual World Mai-Hime - Lulu</span> from his Deck to the hand, then send a <span class="cardName">Virtual World Oto-Hime - Toutou</span><sup>1</sup> from his hand to the GY.</p>
