--- a/duels/13mar21/match2/duel2.html
+++ b/duels/13mar21/match2/duel2.html
@@ -30,7 +30,7 @@
       <p>Benjamin Set<sup>2</sup> a Spell/Trap in Spell &amp; Trap Zone 1.</p>
       <p class="note">Benjamin's <span class="cardName">Virtual World Xiezhi - Jiji</span><sup>2</sup> apply its effect.</p>
       <p>Benjamin add his <span class="cardName">Virtual World Mai-Hime - Lulu</span><sup>1</sup> to the hand.</p>
-      <p>Danyllo activate his Set<sup>1</sup> <span class="cardName">Virtual World Gate - Xuanwu</span><sup>1</sup>. Its effects apply.</p>
+      <p>Danyllo activate his Set<sup>1</sup> <span class="cardName">Virtual World Gate - Xuanwu</span><sup>1</sup>. Its effects resolve.</p>
     </div>
     <div class="turn-p2">
       <p>Danyllo activate the effect of a <span class="cardName">Virtual World Xiezhi - Jiji</span> in his hand, targeting his <span class="cardName">Virtual World Gate - Xuanwu</span><sup>1</sup>. Danyllo send a <span class="cardName">Virtual World Gate - Qinglong</span><sup>2</sup> from his Deck to the GY and Special Summon a <span class="cardName">Virtual World Xiezhi - Jiji</span><sup>3</sup> from his hand to Monster Zone 4 in Attack Position.</p>
@@ -62,7 +62,7 @@
     </div>
     <div class="turn-p2">
       <p>Danyllo activate the effect of a <span class="cardName">Virtual World Mai-Hime - Lulu</span> in his hand, targeting his <span class="cardName">Virtual World Gate - Xuanwu</span><sup>1</sup>. Danyllo send a <span class="cardName">Virtual World City - Kauwloon</span><sup>4</sup> from his Deck to the GY and Special Summon a <span class="cardName">Virtual World Mai-Hime - Lulu</span><sup>4</sup> from his hand to Monster Zone 4 in Attack Position, then add a <span class="cardName">Virtual World Xiezhi - Jiji</span> from his Deck to the hand.</p>
-      <p>Danyllo activate a <span class="cardName">Virtual World Gate - Qinglong</span><sup>4</sup> from his hand in Spell &amp; Trap Zone 3. Its effects apply.</p>
+      <p>Danyllo activate a <span class="cardName">Virtual World Gate - Qinglong</span><sup>4</sup> from his hand in Spell &amp; Trap Zone 3. Its effects resolve.</p>
       <p>Danyllo activate the effect of a <span class="cardName">Virtual World Xiezhi - Jiji</span> in his hand, targeting his <span class="cardName">Virtual World Gate - Qinglong</span><sup>4</sup>. Danyllo send a <span class="cardName">Virtual World Gate - Chuche</span><sup>4</sup> from his Deck to the GY and Special Summon a <span class="cardName">Virtual World Xiezhi - Jiji</span><sup>4</sup> from his hand to Monster Zone 5 in Attack Position.</p>
       <p>Danyllo activate the effect of his <span class="cardName">Virtual World Gate - Qinglong</span><sup>3</sup>, banishing it. Danyllo add a <span class="cardName">Virtual World Roshi - Laolao</span> from his Deck to the hand, then send a <span class="cardName">PSY-Framegear Gamma</span><sup>1</sup> from his hand to the GY.</p>
       <p>Danyllo activate the effect of his <span class="cardName">Virtual World Gate - Chuche</span><sup>4</sup>, banishing it, then target his <span class="cardName">Virtual World Xiezhi - Jiji</span><sup>4</sup>. The effect resolve.</p>
