--- a/duels/13mar21/match3/duel1.html
+++ b/duels/13mar21/match3/duel1.html
@@ -17,7 +17,7 @@
       <p class="activation">Joshua activate the effect of his <span class="cardName">Zoodiac Ratpier</span><sup>1</sup>.</p><div class="chain">
         <p>Jamie activate the effect of a <span class="cardName">Ghost Ogre &amp; Snow Rabbit</span><sup>1</sup> in his hand, sending it to the GY. Jamie destroy Joshua's <span class="cardName">Zoodiac Ratpier</span><sup>1</sup>.</p>
       </div><p class="resolution">Joshua send a <span class="cardName">Zoodiac Combo</span><sup>1</sup> from his Deck to the GY.</p>
-      <p>Joshua activate a <span class="cardName">Cursed Eldland</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 3. Its effects apply.</p>
+      <p>Joshua activate a <span class="cardName">Cursed Eldland</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 3. Its effects resolve.</p>
       <p>Joshua activate the effect of his <span class="cardName">Cursed Eldland</span><sup>1</sup>, paying 800 LP (Joshua 7200 LP). Joshua add a <span class="cardName">Huaquero of the Golden Land</span> from his Deck to the hand.</p>
       <p>Joshua Set<sup>1</sup> a Spell/Trap in Spell &amp; Trap Zone 2.</p>
     </div>
