--- a/duels/13mar21/match4/duel2.html
+++ b/duels/13mar21/match4/duel2.html
@@ -18,7 +18,7 @@
     </div>
     <div class="turn-p2">
       <p>Marijn Set<sup>4</sup> a Spell/Trap in Spell &amp; Trap Zone 3.</p>
-      <p>Marijn activate his Set<sup>4</sup> <span class="cardName">Cursed Eldland</span><sup>1</sup>. Its effects apply.</p>
+      <p>Marijn activate his Set<sup>4</sup> <span class="cardName">Cursed Eldland</span><sup>1</sup>. Its effects resolve.</p>
       <p>Marijn activate the effect of his <span class="cardName">Cursed Eldland</span><sup>1</sup>, paying 800 LP (Marijn 7200 LP). Marijn add a <span class="cardName">Huaquero of the Golden Land</span> from his Deck to the hand.</p>
       <p>Marijn activate the effect of an <span class="cardName">Eldlich the Golden Lord</span><sup>1</sup> in his hand, sending it and an <span class="cardName">Eldlixir of Scarlet Sanguine</span><sup>1</sup> in his hand to the GY, then target Adi's Set<sup>3</sup> Spell/Trap. Marijn send Adi's Set<sup>3</sup> <span class="cardName">Solemn Strike</span><sup>1</sup> to the GY.</p>
       <p>Marijn activate the effect of his <span class="cardName">Eldlich the Golden Lord</span><sup>1</sup>, sending his <span class="cardName">Cursed Eldland</span><sup>1</sup> to the GY. Marijn add his <span class="cardName">Eldlich the Golden Lord</span><sup>1</sup> to the hand.</p>
