update Level/Rank qualifiers

--- a/description/20799347.html
+++ b/description/20799347.html
@@ -34,7 +34,7 @@
       <span class="effectNumber">&#9313;: </span>
       <span class="condition"></span>
       <span class="activation">You can discard 1 Psychic or Wyrm monster; </span>
-      <span class="resolution">Special Summon this card from your GY as a Tuner, but banish it when it leaves the field. For the rest of this turn, you can only Special Summon monsters with a Level/Rank of 3 or higher.</span>
+      <span class="resolution">Special Summon this card from your GY as a Tuner, but banish it when it leaves the field. For the rest of this turn, you can only Special Summon Level/Rank 3 or higher monsters.</span>
     </p>
   </div>
 </body>
