--- a/description/24224830.html
+++ b/description/24224830.html
@@ -19,7 +19,7 @@
       <span class="effectNumber">&#9312;: </span>
       <span class="condition"></span>
       <span class="activation">Target 1 monster in your opponent's GY; </span>
-      <span class="resolution">banish it, and if you do, until the end of next turn, negate the effects of all monsters with the same original name.</span>
+      <span class="resolution">banish it, and if you do, until the end of next turn, negate effects on the field and activated effects of all monsters with the same original name.</span>
     </p>
   </div>
 </body>
