--- a/description/4280258.html
+++ b/description/4280258.html
@@ -22,16 +22,23 @@
     <span id="monsterType">[Fairy / Link / Effect]</span><br>
     <span id="summonReq">2+ non-Token monsters with different names</span><br>
     <!-- <span class="condition"></span><br> -->
-    <p class="cardText">You can only control 1 "Apollousa, Bow of the Goddess".</p>
+    <!-- <p class="cardText"></p> -->
     <p class="effect">
       <span class="effectNumber">&#9312;: </span>
+      <span class="condition"></span>
+      <span class="activation"></span>
+      <span class="resolution"></span>
+      You can only control 1 "Apollousa, Bow of the Goddess".
+    </p>
+    <p class="effect">
+      <span class="effectNumber">&#9313;: </span>
       <span class="condition"></span>
       <span class="activation"></span>
       <span class="resolution"></span>
       The original ATK of this card is 800 &times; the number of materials used for its Link Summon.
     </p>
     <p class="effect">
-      <span class="effectNumber">&#9313;: </span>
+      <span class="effectNumber">&#9314;: </span>
       <span class="condition">Once per Chain, when your opponent activates a monster effect (Quick Effect): </span>
       <span class="activation"></span>
       <span class="resolution">You can make this card lose exactly 800 ATK, and if you do, negate the activation.</span>
