--- a/description/57103969.html
+++ b/description/57103969.html
@@ -19,7 +19,7 @@
       <span class="effectNumber">&#9312;: </span>
       <span class="condition">When this card is activated: </span>
       <span class="activation"></span>
-      <span class="resolution">You can add 1 Beast-Warrior monster with a Level of 4 or lower from your Deck to your hand.</span>
+      <span class="resolution">You can add 1 Level 4 or lower Beast-Warrior monster from your Deck to your hand.</span>
     </p>
     <p class="effect">
       <span class="effectNumber">&#9313;: </span>
