--- a/description/86483512.html
+++ b/description/86483512.html
@@ -27,7 +27,7 @@
       <span class="effectNumber">&#9312;: </span>
       <span class="condition">If this card is in your hand: </span>
       <span class="activation">You can target 1 "Virtual World" card you control; </span>
-      <span class="resolution">send 1 "Virtual World" card of a different type from your Deck to the GY, and if you do, Special Summon this card, then, you can Special Summon a "Virtual World" monster from your GY in Defense Position, with a different name from the card sent to the GY, but negate its effects. For the rest of this turn, you can only Special Summon monsters with a Level/Rank of 3 or higher.</span>
+      <span class="resolution">send 1 "Virtual World" card of a different type from your Deck to the GY, and if you do, Special Summon this card, then, you can Special Summon a "Virtual World" monster from your GY in Defense Position, with a different name from the card sent to the GY, but negate its effects. For the rest of this turn, you can only Special Summon Level/Rank 3 or higher monsters.</span>
     </p>
   </div>
 </body>
