--- a/description/87571563.html
+++ b/description/87571563.html
@@ -18,7 +18,7 @@
     <p class="effect">
       <span class="effectNumber">&#9312;: </span>
       <span class="condition">When this card is activated: </span>
-      <span class="activation">You can target 1 Dragon monster in your GY with a Level of 4 or lower; </span>
+      <span class="activation">You can target 1 Level 4 or lower Dragon monster in your GY; </span>
       <span class="resolution">add it to your hand or Special Summon it.</span>
     </p>
     <p class="effect">
