--- a/description/88504133.html
+++ b/description/88504133.html
@@ -14,7 +14,7 @@
   </div>
   
   <div id="info">
-    <p class="cardText">You can only activate 1 "Phantom Knights' Rank&#8209;Up&#8209;Magic Force" per turn.</p>
+    <p class="cardText">You can only activate 1 "Phantom Knights' Rank-Up-Magic Force" per turn.</p>
     <p class="effect">
       <span class="effectNumber">&#9312;: </span>
       <span class="condition">During the Main Phase: </span>
