--- a/description/9126351.html
+++ b/description/9126351.html
@@ -34,7 +34,7 @@
       <span class="effectNumber">&#9313;: </span>
       <span class="condition">When this card is Summoned: </span>
       <span class="activation"></span>
-      <span class="resolution">You can send 1 WATER Aqua monster with a Level of 2 or lower from your Deck or face-up field to the GY.</span>
+      <span class="resolution">You can send 1 Level 2 or lower WATER Aqua monster from your Deck or face-up field to the GY.</span>
     </p>
     <p class="effect">
       <span class="effectNumber">&#9314;: </span>
