--- a/description/9348522.html
+++ b/description/9348522.html
@@ -34,7 +34,7 @@
       <span class="condition"></span>
       <span class="activation"></span>
       <span class="resolution"></span>
-      Monsters with a Level of 8 or lower cannot attack the turn they are Normal or Special Summoned.
+      Level 8 or lower monsters cannot attack the turn they are Normal or Special Summoned.
     </p>
   </div>
 </body>
