--- a/description/95992081.html
+++ b/description/95992081.html
@@ -26,7 +26,7 @@
     <p class="effect">
       <span class="effectNumber">&#9312;: </span>
       <span class="condition">Once per turn: </span>
-      <span class="activation">You can detach 1 material from this card, then target 1 banished monster with a Level of 4 or lower; </span>
+      <span class="activation">You can detach 1 material from this card, then target 1 Level 4 or lower banished monster; </span>
       <span class="resolution">Special Summon that target to your field.</span>
     </p>
   </div>
