--- a/description/12571621.html
+++ b/description/12571621.html
@@ -27,7 +27,7 @@
       <span class="effectNumber">&#9312;: </span>
       <span class="condition">If this card is in your hand: </span>
       <span class="activation">You can target 1 "Virtual World" card you control; </span>
-      <span class="resolution">send 1 "Virtual World" card of a different type from your Deck to the GY, and if you do, Special Summon this card, then, during the End Phase, you can add 1 "Virtual World" monster from your GY to your hand, except "Virtual World Xiezhi - Jiji". For the rest of this turn, you can only Special Summon monsters with a Level/Rank of 3 or higher.</span>
+      <span class="resolution">send 1 "Virtual World" card of a different type from your Deck to the GY, and if you do, Special Summon this card, then, during the End Phase, you can add 1 "Virtual World" monster from your GY to your hand, except "Virtual World Xiezhi - Jiji". For the rest of this turn, you can only Special Summon Level/Rank 3 or higher monsters.</span>
     </p>
   </div>
 </body>
