--- a/description/67723438.html
+++ b/description/67723438.html
@@ -19,7 +19,7 @@
       <span class="effectNumber">&#9312;: </span>
       <span class="condition"></span>
       <span class="activation"></span>
-      <span class="resolution">Special Summon 1 Psychic monster with a Level of 3 or lower from your hand or Deck, but banish it during the End Phase.</span>
+      <span class="resolution">Special Summon 1 Level 3 or lower Psychic monster from your hand or Deck, but banish it during the End Phase.</span>
     </p>
   </div>
 </body>
