--- a/description/73539069.html
+++ b/description/73539069.html
@@ -20,7 +20,7 @@
   
   <div id="info">
     <span id="monsterType">[Dragon / Link / Effect]</span><br>
-    <span id="summonReq">1 Dragon monster with a Level of 4 or lower</span><br>
+    <span id="summonReq">1 Level 4 or lower Dragon monster</span><br>
     <!-- <span class="condition"></span><br> -->
     <p class="cardText">You can only use effect &#9312; and &#9313; of "Striker Dragon" once per turn.</p>
     <p class="effect">
