--- a/description/8736823.html
+++ b/description/8736823.html
@@ -27,7 +27,7 @@
       <span class="effectNumber">&#9312;: </span>
       <span class="condition">If a Level 3 monster(s) is Normal or Special Summoned to your field: </span>
       <span class="activation"></span>
-      <span class="resolution">You can Special Summon this card from your GY as a Tuner, but banish it when it leaves the field. For the rest of this turn, you can only Special Summon monsters with a Level/Rank of 3 or higher.</span>
+      <span class="resolution">You can Special Summon this card from your GY as a Tuner, but banish it when it leaves the field. For the rest of this turn, you can only Special Summon Level/Rank 3 or higher monsters.</span>
     </p>
     <p class="effect">
       <span class="effectNumber">&#9313;: </span>
