--- a/description/98978921.html
+++ b/description/98978921.html
@@ -27,7 +27,7 @@
       <span class="effectNumber">&#9312;: </span>
       <span class="condition">Once per turn: </span>
       <span class="activation"></span>
-      <span class="resolution">You can Special Summon 1 Normal Monster with a Level of 4 or lower from your hand to your zone this card points to.</span>
+      <span class="resolution">You can Special Summon 1 Level 4 or lower Normal Monster from your hand to your zone this card points to.</span>
     </p>
   </div>
 </body>
